# haskell-test-project-example

./: CHANGELOG.md  README.md  haskell-test-project-example.cabal
src/: MergeSort.hs  QuickSort.hs
test/: MergeSortSpec.hs  QuickSortSpec.hs  Spec.hs
