cabal-version:      2.4
name:               haskell-test-project-example
version:            0.1.0.0

author:             Shane Connon
maintainer:         shane.connon@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MergeSort
    exposed-modules:  QuickSort
    
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite unit-tests
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:         test
    main-is:                Spec.hs
    build-depends:          base ^>=4.16.0.0
                            , hspec ^>= 2.7.4
                            , QuickCheck ^>= 2.14.2
                            , merge
                            , haskell-test-project-example
    other-modules:          MergeSortSpec
                            QuickSortSpec
    build-tool-depends:     hspec-discover:hspec-discover == 2.*
